# ansible-zpool

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: static_analysis.yaml  tests.yaml  zpools.yaml
cazier/homebrew/: README.md  galaxy.yml
cazier/homebrew/plugins/modules/: facts.py
cazier/utils/: galaxy.yml
cazier/utils/plugins/filter/: facts.py
cazier/utils/plugins/modules/: facts.py
cazier/zfs/: README.md  galaxy.yml
cazier/zfs/plugins/filter/: zfs.py
cazier/zfs/plugins/module_utils/: utils.py
cazier/zfs/plugins/modules/: _utils.py  utils.py  zpool.py
tests/: conftest.py  test__utils.py  test_ansible.py  test_data.yaml  test_filters.py  test_helpers.py  test_utils.py  test_zpool.py
tests/cazier/zfs/: helpers_test.py
tests/config/: console.yaml  filters.yaml  helpers.yaml  integration.yaml  options.yaml
