[tool.poetry]
name = "zpool-collection"
version = "1.0.0"
description = "An ansible module to configure/create/destroy zpools."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zpool_collection"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.14.1"

[tool.poetry.group.dev.dependencies]
ward = "^0.67.0b0"
mypy = "^0.991"
pylint = "^2.15.10"
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
ansible = "^7.1.0"
types-pyyaml = "^6.0.12.2"
ipython = "^8.8.0"
epdb = "^0.15.1"
darglint = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
