[tool.poetry]
name = "ansible-zpool"
version = "1.0.0"
description = "An ansible module to configure/create/destroy zpools."
authors = ["Brendan Cazier <520246+cazier@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cazier"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.14.1"

[tool.poetry.group.testing.dependencies]
ansible-core = "^2.14.1"
pyyaml = "^6.0"
ward = "^0.67.0b0"

[tool.poetry.group.static.dependencies]
ansible-core = "^2.14.1"
black = "^22.12.0"
darglint = "^1.8.1"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.10"
types-pyyaml = "^6.0.12.2"
coverage = "^7.0.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ansible = "^7.1.0"
ipython = "^8.8.0"
epdb = "^0.15.1"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring"

[tool.mypy]
strict = true
mypy_path = "python"
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ward]
hook_module = ["tests.conftest"]
